...
      padding: const EdgeInsets.symmetric(horizontal: 8, vertical: 6),
      child: Row(
          mainAxisAlignment: MainAxisAlignment.spaceEvenly,
          children: [
            _BottomNavItem(
              icon: Icons.explore_outlined,
              label: 'Tonight',
              active: currentIndex == 0,
              onTap: () => onTap(0),
            ),
            _BottomNavItem(
              icon: Icons.favorite_outline,
              label: 'Likes',
...
              label: 'Blinds',
              active: currentIndex == 4,
              onTap: () => onTap(4),
            ),
             _BottomNavItem(
              icon: Icons.person_outline,
              label: 'Profile',
              active: currentIndex == 5,
              onTap: () => onTap(5),
            ),
          ],
        ),
    );
...
